src/BRIDGE_Connection/logs/KP_test-HW_5457685.err
Traceback (most recent call last):
  File "/home/kp779/BRIDGE_Connection/src/BRIDGE_Connection/compliance.py", line 7, in <module>
    from init import *
  File "/home/kp779/BRIDGE_Connection/src/BRIDGE_Connection/init.py", line 103
    if Name == 'half_wheel' or Name == 'bridge':
    ^
IndentationError: expected an indented block
